--- a/index.html
+++ b/index.html
@@ -6,32 +6,25 @@
       { name: "Work", commands: [
         { key: 'g', name: 'GitHub', url: 'https://github.com', search: '/search?q={}' },
         { key: 'm', name: 'Inbox', url: 'https://inbox.google.com', search: '/search/{}' },
-        { key: 'k', name: 'Keep', url: 'https://keep.google.com', search: '/#search/text={}' },
       ] },
       { name: "Lurk", commands: [
-        { key: 'i', name: 'Instagram', url: 'https://www.instagram.com', search: false },
         { key: 'r', name: 'Reddit', url: 'https://www.reddit.com', search: '/search?q={}' },
         { key: 't', name: 'Twitter', url: 'https://twitter.com', search: '/search?q={}' },
+        { key: 'h', name: 'Hacker News', url: 'http://hn.premii.com/#', search: '' },
+        { key: 'f', name: 'Facebook', url: 'https://www.facebook.com/', search: 'search/top/?q={}' },
+        { key: 'w', name: 'Wired', url: 'https://www.wired.com/', search: 'search?q={}' },
       ] },
-      { name: "Listen", commands: [
-        { key: 'h', name: 'Hypem', url: 'http://hypem.com/popular', search: '/search/{}' },
-        { key: 'l', name: 'Line Radio', url: 'https://linerad.io', search: '/#{}' },
-        { key: 's', name: 'SoundCloud', url: 'https://soundcloud.com/discover', search: '/search?q={}' },
+      { name: "Buy", commands: [
+        { key: 'a', name: 'Line Radio', url: 'https://amazon.com', search: 's/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords={}' },
       ] },
       { name: "Watch", commands: [
         { key: 'n', name: 'Netflix', url: 'https://www.netflix.com/browse', search: '/search?q={}' },
-        { key: 'w', name: 'Twitch', url: 'https://www.twitch.tv/directory/following', search: false },
         { key: 'y', name: 'YouTube', url: 'https://youtube.com/feed/subscriptions', search: '/results?search_query={}' },
-      ] },
-      { name: "Download", commands: [
-        { key: 'T', name: 'TPB', url: 'https://thepiratebay.org', search: '/search/{}' },
-        { key: 'Y', name: 'YIFY', url: 'https://yts.ag/browse-movies/0/1080p/all/7/latest', search: '/browse-movies/{}/1080p/all/0/rating' },
-        { key: '7', name: '7digital', url: 'https://us.7digital.com', search: '/search?q={}' },
       ] },
     ],
 
     // if none of the keys are matched, this is used for searching.
-    defaultSearch: 'https://encrypted.google.com/search?q={}',
+    defaultSearch: 'https://duckduckgo.com/?q={}',
 
     // the delimiter between the key and your search query.
     // e.g. to search GitHub for potatoes you'd type "g:potatoes".
@@ -46,7 +39,7 @@
     instantRedirect: false,
 
     // suggest your most popular queries as you type.
-    suggestions: false,
+    suggestions: true,
 
     // max amount of suggestions to display.
     suggestionsLimit: 4,
