fixed searching for certain sites

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         { key: 'r', name: 'Reddit', url: 'https://www.reddit.com', search: '/search?q={}' },
         { key: 't', name: 'Twitter', url: 'https://twitter.com', search: '/search?q={}' },
         { key: 'h', name: 'Hacker News', url: 'http://hn.premii.com/#', search: '' },
-        { key: 'f', name: 'Facebook', url: 'https://www.facebook.com/', search: 'search/top/?q={}' },
-        { key: 'w', name: 'Wired', url: 'https://www.wired.com/', search: 'search?q={}' },
+        { key: 'f', name: 'Facebook', url: 'https://www.facebook.com/', search: '/search/top/?q={}' },
+        { key: 'w', name: 'Wired', url: 'https://www.wired.com/', search: '/search?q={}' },
       ] },
       { name: "Buy", commands: [
-        { key: 'a', name: 'Line Radio', url: 'https://amazon.com', search: 's/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords={}' },
+        { key: 'a', name: 'Line Radio', url: 'https://amazon.com/', search: '/s/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords={}' },
       ] },
       { name: "Watch", commands: [
         { key: 'n', name: 'Netflix', url: 'https://www.netflix.com/browse', search: '/search?q={}' },
