added some work specific links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     commands: [
       [null, 'Google', '*', 'https://encrypted.google.com', '/search?q={}', '#111'],
       ['Work', 'GitHub', 'g', 'https://github.com', '/search?q={}', '#333'],
-      ['Work', 'Inbox', 'I', 'https://inbox.google.com', '/search/{}', '#4285f4'],
+      ['Work', 'GitHub Enterprise', 'g', 'https://github.datto.com', '/search?q={}', '#333'],
+      ['Work', 'Jira', 'j', 'https://jira.datto.net/secure', null, '#333'],
+      ['Work', 'Gmail', 'I', 'https://gmail.google.com', '/search/{}', '#4285f4'],
       ['Work', 'Keep', 'k', 'https://keep.google.com', '/#search/text={}', '#fb0'],
       ['Look', 'Photos', 'P', 'https://photos.google.com', '/search/{}', '#34a853'],
       ['Lurk', 'Facebook', 'f', 'https://www.facebook.com', '/search/top/?q={}', '#3b5998'],
