--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     commands: [
       [null, 'Google', '*', 'https://encrypted.google.com', '/search?q={}', '#111'],
       ['Work', 'GitHub', 'g', 'https://github.com', '/search?q={}', '#333'],
-      ['Work', 'GitHub Enterprise', 'ge', 'https://github.datto.com', '/search?q={}', '#333'],
+      ['Work', 'GitHub Enterprise', 'ge', 'https://github.datto.net', '/search?q={}', '#333'],
       ['Work', 'Jira', 'j', 'https://jira.datto.net/secure', null, '#333'],
       ['Work', 'Gmail', 'I', 'https://gmail.google.com', '/search/{}', '#4285f4'],
       ['Work', 'Keep', 'k', 'https://keep.google.com', '/#search/text={}', '#fb0'],
